function that warns user if not logged in

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12332,3 +12332,14 @@ a.text-dark:focus {
   }
 }
 
+.modal-container {
+  padding: 10px;
+}
+
+.ad {
+  z-index: 1001;
+  color: red;
+  top: 0;
+  position: sticky;
+}
+
