--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,3 +7,13 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap-icons/font/bootstrap-icons.css';
+
+.modal-container {
+    padding: 10px;
+}
+.ad {
+    z-index: 1001;
+    color: red;
+    top: 0;
+    position: sticky;
+}
